--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
         <div class="col-sm-6">
           <div> 
-            <p>Hi, I'm a 22 years old student from Thomas More Kempen  Hello my name is Joey Van Erum I'm a student in electronics ICT at Thomas More Kempen.</p>
+            <p>Hi, I'm a 22 years old student in Cloud & Cybersecurity at Thomas More Kempen. I am a very hardworking and motivated person who is very passionate about IT. </p>
           </div>
         </div>
   </section>
