aanpassing tekst erasmus

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
         <div class="col-sm-6">
           <div> 
-            <p>Hi, I'm a 22 years old student in Cloud & Cybersecurity at Thomas More Kempen. I am a very hardworking and motivated person who is very passionate about IT. </p>
+            <p>Hi, I'm a 22 years old student in Cloud & Cybersecurity at Thomas More Kempen. I am a hardworking and motivated person who is very passionate about IT. </p>
           </div>
         </div>
   </section>
@@ -125,25 +125,26 @@
                         <h4>March 2020</h4>
                         <h4 class="subheading">Our Humble Beginnings</h4>
                     </div>
-                    <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                    <div class="timeline-body"><p class="text-muted">On March 7 we left on our foreign adventure but unfortunately this did not last long, after 10 days we had to return to Belgium. Our assignment was to check the security of smart home devices, such as what data they send back to their server and whether this is all done securely.
+                       Of course, due to the circumstances, we had to investigate everything at home with the devices that we had, so we started asking friends and family whether they had any smart devices. Fortunately, a friend still had some equipment and we could already start our internship.</p></div>
                 </div>
             </li>
             <li class="timeline-inverted">
                 <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="" /></div>
                 <div class="timeline-panel">
                     <div class="timeline-heading">
-                        <h4>April 2020</h4>
-                        <h4 class="subheading">An Agency is Born</h4>
+                        <h4>March-April 2020</h4>
+                        <h4 class="subheading">Smart devices</h4>
                     </div>
-                    <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                    <div class="timeline-body"><p class="text-muted">On the google devices we found relatively little information that could be harmful. Only on the google chromecast we found quite a lot of information about the device itself, such as which encryption she used and ip addresses and mac addresses. On the smart TV I researched, we could see which sites this person went to with the TV browser. Also a number of XML files where the serial number and other information about the TV itself were stored.</p></div>
                 </div>
             </li>
             <li>
                 <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="" /></div>
                 <div class="timeline-panel">
                     <div class="timeline-heading">
-                        <h4>December 2012</h4>
-                        <h4 class="subheading">Transition to Full Service</h4>
+                        <h4>April-May 2020</h4>
+                        <h4 class="subheading">The paper</h4>
                     </div>
                     <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
                 </div>
@@ -152,8 +153,8 @@
                 <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="" /></div>
                 <div class="timeline-panel">
                     <div class="timeline-heading">
-                        <h4>July 2014</h4>
-                        <h4 class="subheading">Phase Two Expansion</h4>
+                        <h4>May 2020</h4>
+                        <h4 class="subheading">End</h4>
                     </div>
                     <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
                 </div>
