tekst en afbeeldingen

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div class="row">
         <div class="col-sm-6">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/mezelf.png" alt="">
+            <img class="mx-auto rounded-circle" src="img/mezelf.JPG" alt="">
             <h4>Joey Van Erum</h4>
             <p class="text-muted">Cloud & Cybersecurity</p>
             <ul class="list-inline social-buttons">
@@ -369,14 +369,13 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                <h2 class="text-uppercase">Project hosting</h2>
+                <p class="item-intro text-muted">Hosting a webserver for other students</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                <p>With this project we made a hosting platform for the website of the students from APP. We made everything here in Docker Compose, which was a very big challenge, but it still worked.</p>
                 <ul class="list-inline">
-                  <li>Date: January 2017</li>
-                  <li>Client: Threads</li>
-                  <li>Category: Illustration</li>
+                  <li>Date: June 2019</li>
+                  <li>Category: Hosting</li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
@@ -403,14 +402,15 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                <h2 class="text-uppercase">Project 4.0</h2>
+                <p class="item-intro text-muted">Hosting platform with AWS</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/02-full.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                <p>In my last year I had the privilege to work with a team of six on a mobile application. The main goals of this project were three things: efficiency, thinking green and improving safety.
+                  The mobile application took care of tracking your location, giving you the fastest route and alarming one if he comes to close to a transportation vehicle. This would boost the efficiency of a docker in the port of Antwerp.
+                  I was mainly working on the hosting part of the app, we did this with AWS. We also needed a way to host the backend on our server and we did this with docker files.</p>
                 <ul class="list-inline">
-                  <li>Date: January 2017</li>
-                  <li>Client: Explore</li>
-                  <li>Category: Graphic Design</li>
+                  <li>Date: June 2019</li>
+                  <li>Category: Hosting</li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
@@ -437,14 +437,14 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                <h2 class="text-uppercase">Security audit</h2>
+                <p class="item-intro text-muted">Security audit for a company </p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/03-full.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                <p>In the third year, me and a few others were allowed to perform a security audit at a company, this gave us the opportunity to learn a lot of penetration tools and to find all kinds of weaknesses in their network. Here we have written a document about what can be done better in the future and what they should pay attention to.</p>
                 <ul class="list-inline">
-                  <li>Date: January 2017</li>
-                  <li>Client: Finish</li>
-                  <li>Category: Identity</li>
+                  <li>Date: Oktober-November 2019</li>
+                  <li>Client: Classified</li>
+                  <li>Category: Cyber security</li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
