--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         <h4>April-May 2020</h4>
                         <h4 class="subheading">The paper</h4>
                     </div>
-                    <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                    <div class="timeline-body"><p class="text-muted">At the end of April early May we started writing all our findings in a paper. Our supervisor Torben then helped us to do all this in a correct template, we had never written a paper before so he helped us very well.</p></div>
                 </div>
             </li>
             <li class="timeline-inverted">
