--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
         <div class="col-sm-6">
           <div> 
             <p>Hi, I'm a 22 years old student in Cloud & Cybersecurity at Thomas More Kempen. I am a hardworking and motivated person who is very passionate about IT. </p>
+            <p>This portfolio shows what I have done throughout my college career and what I want to do in the future.</p>
           </div>
         </div>
   </section>
@@ -119,7 +120,7 @@
         </div>
         <ul class="timeline">
             <li>
-                <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="" /></div>
+                <div class="timeline-image"><img class="rounded-circle img-fluid" src="img/foto1.jpg" alt="" /></div>
                 <div class="timeline-panel">
                     <div class="timeline-heading">
                         <h4>March 2020</h4>
@@ -130,7 +131,7 @@
                 </div>
             </li>
             <li class="timeline-inverted">
-                <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="" /></div>
+                <div class="timeline-image"><img class="rounded-circle img-fluid" src="img/smart speaker.jpg" alt="" /></div>
                 <div class="timeline-panel">
                     <div class="timeline-heading">
                         <h4>March-April 2020</h4>
@@ -140,13 +141,13 @@
                 </div>
             </li>
             <li>
-                <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="" /></div>
+                <div class="timeline-image"><img class="rounded-circle img-fluid" src="img/study.jpg" alt="" /></div>
                 <div class="timeline-panel">
                     <div class="timeline-heading">
                         <h4>April-May 2020</h4>
                         <h4 class="subheading">The paper</h4>
                     </div>
-                    <div class="timeline-body"><p class="text-muted">At the end of April early May we started writing all our findings in a paper. Our supervisor Torben then helped us to do all this in a correct template, we had never written a paper before so he helped us very well.</p></div>
+                    <div class="timeline-body"><p class="text-muted">At the end of April early May we started writing all our findings in a paper. Our supervisor Torben helped us to do all this in a correct template, we had never written a paper before so he helped us very well.</p></div>
                 </div>
             </li>
             <li class="timeline-inverted">
@@ -154,14 +155,18 @@
                 <div class="timeline-panel">
                     <div class="timeline-heading">
                         <h4>May 2020</h4>
-                        <h4 class="subheading">End</h4>
+                        <h4 class="subheading">The end</h4>
                     </div>
-                    <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                    <div class="timeline-body"><p class="text-muted">After finishing everything, I still come across a nice experience. We have been given the opportunity to work with a foreign client, which not every student can say about their internship. Down below you can find our paper, projectplan and my reflection.</p>
+                    <p class="timeline-body"><p class="text-muted">The paper</p>
+                    <p class="timeline-body"><p class="text-muted">The project plan</p>
+                    <p class="timeline-body"><p class="text-muted">The reflection</p>
+                    </div>
                 </div>
             </li>
             <li class="timeline-inverted">
                 <div class="timeline-image">
-                    <h4>Be Part<br />Of Our<br />Story!</h4>
+                    <h4>My<br />Internship!</h4>
                 </div>
             </li>
         </ul>
@@ -318,7 +323,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-4">
-          <span class="copyright">Copyright &copy; Your Website 2019</span>
+          <span class="copyright">Copyright &copy; Joey Van Erum</span>
         </div>
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
