enkele portfolio items

--- a/index.html
+++ b/index.html
@@ -157,10 +157,8 @@
                         <h4>May 2020</h4>
                         <h4 class="subheading">The end</h4>
                     </div>
-                    <div class="timeline-body"><p class="text-muted">After finishing everything, I still come across a nice experience. We have been given the opportunity to work with a foreign client, which not every student can say about their internship. Down below you can find our paper, projectplan and my reflection.</p>
-                    <p class="timeline-body"><p class="text-muted">The paper</p>
-                    <p class="timeline-body"><p class="text-muted">The project plan</p>
-                    <p class="timeline-body"><p class="text-muted">The reflection</p>
+                    <div class="timeline-body"><p class="text-muted">After finishing everything, I still come across a nice experience. We have been given the opportunity to work with a foreign client, which not every student can say about their internship. </p>
+                  
                     </div>
                 </div>
             </li>
@@ -226,7 +224,7 @@
             <p class="text-muted">Auditting a company</p>
           </div>
         </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
+        <div class="col-md-4 col-sm-6 portfolio-item offset-md-2">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
@@ -236,11 +234,11 @@
             <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Lines</h4>
-            <p class="text-muted">Branding</p>
+            <h4>Project Network</h4>
+            <p class="text-muted">Infrastructure design</p>
           </div>
         </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
+        <div class="col-md-4 col-sm-6 portfolio-item ">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
@@ -250,22 +248,8 @@
             <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Southwest</h4>
-            <p class="text-muted">Website Design</p>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Window</h4>
-            <p class="text-muted">Photography</p>
+            <h4>Internship</h4>
+            <p class="text-muted">Erasmus Sweden</p>
           </div>
         </div>
       </div>
@@ -476,14 +460,14 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                <h2 class="text-uppercase">Project Network</h2>
+                <p class="item-intro text-muted">Desinging infrastucture for a company.</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/04-full.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                <p>In this project I designed a network infrastructure together with 4 other students. We were commissioned here to build a network infrastructure for a 3-storey building using as little material as possible. This project was quite extensive because it went from internet cables to routers and switches to the appropriate places.</p>
                 <ul class="list-inline">
-                  <li>Date: January 2017</li>
-                  <li>Client: Lines</li>
-                  <li>Category: Branding</li>
+                  <li>Date: January 2019</li>
+                  <li>Client: Thomas more</li>
+                  <li>Category: Infrastructure</li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
@@ -510,14 +494,17 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                <h2 class="text-uppercase">Internship</h2>
+                <p class="item-intro text-muted">Erasmus to Sweden</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/05-full.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                <p>Down below you can find our paper, projectplan and my reflection.</p>
+                <p class="timeline-body"><p class="text-muted">The paper</p>
+                <p class="timeline-body"><p class="text-muted">The project plan</p>
+                <p class="timeline-body"><p class="text-muted">The reflection</p>
                 <ul class="list-inline">
-                  <li>Date: January 2017</li>
-                  <li>Client: Southwest</li>
-                  <li>Category: Website Design</li>
+                  <li>Date: May 2020</li>
+                  <li>Client: Halmstad University</li>
+                  <li>Category: Cybersecurity</li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
