afbeeldingen en tekst

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Joey Van Erum</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Portfolio</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -100,6 +100,17 @@
                   <i class="fab fa-linkedin-in"></i>
                 </a>
               </li>
+              </li>
+                <li class="list-inline-item">
+                  <a href="mailto:joey.vanerum97@gmail.com">
+                  <i class="fas fa-envelope"></i>
+                 </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="cv/CV_Joey_Van_Erum portfolio.pdf" target="_blank">
+                <i>CV</i>
+              </a>
+            </li>
             </ul>
           </div>
         </div>
@@ -151,7 +162,7 @@
                 </div>
             </li>
             <li class="timeline-inverted">
-                <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="" /></div>
+                <div class="timeline-image"><img class="rounded-circle img-fluid" src="img/the end.jpg" alt="" /></div>
                 <div class="timeline-panel">
                     <div class="timeline-heading">
                         <h4>May 2020</h4>
@@ -189,7 +200,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/lamp2.png" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Project Hosting</h4>
@@ -203,42 +214,59 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/port-tracker2.png" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Project 4.0</h4>
             <p class="text-muted">Hosting environment</p>
           </div>
         </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
+        <div class="col-md-4 col-sm-6 portfolio-item ">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/security audit.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Security Audit</h4>
             <p class="text-muted">Auditting a company</p>
           </div>
         </div>
-        <div class="col-md-4 col-sm-6 portfolio-item offset-md-2">
+            <!-- With margin -->
+        <div class="col-md-4 col-sm-6 portfolio-item d-none d-md-block" style="margin-left: 15%;">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/network2.png" alt="">
+          </a>
+          <div class="portfolio-caption">
+          <h4>Project Network</h4>
+          <p class="text-muted">Infrastructure design</p>
+          </div>
+        </div>
+    
+            <!-- without margin -->
+        <div class="col-md-4 col-sm-6 portfolio-item d-block d-md-none">
+         <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+                <i class="fas fa-plus fa-3x"></i>
+              </div>
+            </div>
+            <img class="img-fluid" src="img/portfolio/network2.png" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Project Network</h4>
             <p class="text-muted">Infrastructure design</p>
           </div>
         </div>
-        <div class="col-md-4 col-sm-6 portfolio-item ">
+        <div class="col-md-4 col-sm-6 portfolio-item">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
@@ -248,11 +276,10 @@
             <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Internship</h4>
+           <h4>Internship</h4>
             <p class="text-muted">Erasmus Sweden</p>
           </div>
         </div>
-      </div>
     </div>
   </section>
 
@@ -360,8 +387,9 @@
                 <!-- Project Details Go Here -->
                 <h2 class="text-uppercase">Project hosting</h2>
                 <p class="item-intro text-muted">Hosting a webserver for other students</p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/lamp.png" alt="">
                 <p>With this project we made a hosting platform for the website of the students from APP. We made everything here in Docker Compose, which was a very big challenge, but it still worked.</p>
+                
                 <ul class="list-inline">
                   <li>Date: June 2019</li>
                   <li>Category: Hosting</li>
@@ -393,11 +421,12 @@
                 <!-- Project Details Go Here -->
                 <h2 class="text-uppercase">Project 4.0</h2>
                 <p class="item-intro text-muted">Hosting platform with AWS</p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/02-full.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/project4.0.jpg" alt="">
                 <p>In my last year I had the privilege to work with a team of six on a mobile application. The main goals of this project were three things: efficiency, thinking green and improving safety.
                   The mobile application took care of tracking your location, giving you the fastest route and alarming one if he comes to close to a transportation vehicle. This would boost the efficiency of a docker in the port of Antwerp.
                   I was mainly working on the hosting part of the app, we did this with AWS. We also needed a way to host the backend on our server and we did this with docker files.</p>
-                <ul class="list-inline">
+                <p>Here you will find a video that we made where you see our app in operation: Link</p>
+                  <ul class="list-inline">
                   <li>Date: June 2019</li>
                   <li>Category: Hosting</li>
                 </ul>
