--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
   </nav>
 
   <!-- Header -->
-  <header class="masthead">
+  <header class="masthead" style="height: 100vh;">
     <div class="container">
       <div class="intro-text">
         <div class="intro-lead-in">Hello!</div>
-        <div class="intro-heading  text-xl-left ">I am Joey Van Erum.</div>
-        <div class="intro-heading  text-xl-left">A cloud & cybersecurity enthousiast.</div>
+        <div class="intro-heading  text-center ">I am Joey Van Erum</div>
+        <div class="intro-heading  text-xl-center">A cloud & cybersecurity enthousiast.</div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">More</a>
       </div>
     </div>
@@ -425,7 +425,8 @@
                 <p>In my last year I had the privilege to work with a team of six on a mobile application. The main goals of this project were three things: efficiency, thinking green and improving safety.
                   The mobile application took care of tracking your location, giving you the fastest route and alarming one if he comes to close to a transportation vehicle. This would boost the efficiency of a docker in the port of Antwerp.
                   I was mainly working on the hosting part of the app, we did this with AWS. We also needed a way to host the backend on our server and we did this with docker files.</p>
-                <p>Here you will find a video that we made where you see our app in operation: Link</p>
+                <p>Here you will find a video that we made where you see our app in operation: <a href="https://www.youtube.com/watch?v=h-qB6DSNlSw&list=WL&index=106&t=0s" target="_blank">Link</a></p>
+                <p>if you want to take a look at the site itself, click this <a href="https://estebanbeerens.com/portfolio/porttracker/" target="_blank">link</a></p>
                   <ul class="list-inline">
                   <li>Date: June 2019</li>
                   <li>Category: Hosting</li>
@@ -456,8 +457,8 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
                 <h2 class="text-uppercase">Security audit</h2>
-                <p class="item-intro text-muted">Security audit for a company </p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/03-full.jpg" alt="">
+                <p class="item-intro text-muted">Security audit for a company</p>
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/security audit2.jpg" alt="">
                 <p>In the third year, me and a few others were allowed to perform a security audit at a company, this gave us the opportunity to learn a lot of penetration tools and to find all kinds of weaknesses in their network. Here we have written a document about what can be done better in the future and what they should pay attention to.</p>
                 <ul class="list-inline">
                   <li>Date: Oktober-November 2019</li>
@@ -491,8 +492,8 @@
                 <!-- Project Details Go Here -->
                 <h2 class="text-uppercase">Project Network</h2>
                 <p class="item-intro text-muted">Desinging infrastucture for a company.</p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/04-full.jpg" alt="">
-                <p>In this project I designed a network infrastructure together with 4 other students. We were commissioned here to build a network infrastructure for a 3-storey building using as little material as possible. This project was quite extensive because it went from internet cables to routers and switches to the appropriate places.</p>
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/network3.PNG" alt="">
+                <p>In this project I designed a network infrastructure together with 4 other students. We were commissioned here to build a network infrastructure for a 3-storey building using as little material as possible. This project was quite extensive because it went from internet cables to finding routers and switches and placing them in the right places.</p>
                 <ul class="list-inline">
                   <li>Date: January 2019</li>
                   <li>Client: Thomas more</li>
@@ -526,7 +527,7 @@
                 <h2 class="text-uppercase">Internship</h2>
                 <p class="item-intro text-muted">Erasmus to Sweden</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/05-full.jpg" alt="">
-                <p>Down below you can find our paper, projectplan and my reflection.</p>
+                <p>My internship consisted of testing the security of a number of smart home devices that can be found everywhere on the market. We have then written all our findings in a paper that may be published in Stockholm next year. This went from the data that the device forwarded to its server to the possible access points where a potential hacker can enter. Down below you can find our paper, projectplan and my reflection.</p>
                 <p class="timeline-body"><p class="text-muted">The paper</p>
                 <p class="timeline-body"><p class="text-muted">The project plan</p>
                 <p class="timeline-body"><p class="text-muted">The reflection</p>
