tekst en bestanden

--- a/index.html
+++ b/index.html
@@ -62,8 +62,10 @@
     <div class="container">
       <div class="intro-text">
         <div class="intro-lead-in">Hello!</div>
-        <div class="intro-heading  text-center ">I am Joey Van Erum</div>
+        <div class=" intro-lead-in ">I am Joey Van Erum</div>
         <div class="intro-heading  text-xl-center">A cloud & cybersecurity enthousiast.</div>
+        <div class="text-center" style="color: white;">In this portfolio I will briefly introduce myself and you will also find a number of projects that I have made throughout my Thomas More career</div>
+        <br>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">More</a>
       </div>
     </div>
@@ -116,7 +118,7 @@
         </div>
         <div class="col-sm-6">
           <div> 
-            <p>Hi, I'm a 22 years old student in Cloud & Cybersecurity at Thomas More Kempen. I am a hardworking and motivated person who is very passionate about IT. </p>
+            <p>Hi, I'm a 22 years old student in Cloud & Cybersecurity at Thomas More Kempen. I am a hardworking and motivated person who is very passionate about IT. I enjoy working in a team, but I can also function independently. </p>
             <p>This portfolio shows what I have done throughout my college career and what I want to do in the future.</p>
           </div>
         </div>
@@ -355,16 +357,6 @@
             </li>
           </ul>
         </div>
-        <div class="col-md-4">
-          <ul class="list-inline quicklinks">
-            <li class="list-inline-item">
-              <a href="#">Privacy Policy</a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">Terms of Use</a>
-            </li>
-          </ul>
-        </div>
       </div>
     </div>
   </footer>
@@ -389,7 +381,7 @@
                 <p class="item-intro text-muted">Hosting a webserver for other students</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/lamp.png" alt="">
                 <p>With this project we made a hosting platform for the website of the students from APP. We made everything here in Docker Compose, which was a very big challenge, but it still worked.</p>
-                
+                <p>In this document you can see what we have all built up during this project week: <a href="Project hosting.pdf" target="_blank">Project Hosting</a></p>
                 <ul class="list-inline">
                   <li>Date: June 2019</li>
                   <li>Category: Hosting</li>
@@ -494,6 +486,7 @@
                 <p class="item-intro text-muted">Desinging infrastucture for a company.</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/network3.PNG" alt="">
                 <p>In this project I designed a network infrastructure together with 4 other students. We were commissioned here to build a network infrastructure for a 3-storey building using as little material as possible. This project was quite extensive because it went from internet cables to finding routers and switches and placing them in the right places.</p>
+                <p>In this document you can find all our findings that we found during this project week <a href="Infra project - Team 6.pdf" target="_blank">Infra project</a></p>
                 <ul class="list-inline">
                   <li>Date: January 2019</li>
                   <li>Client: Thomas more</li>
