--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
-          </li>
+          </li> -->
         </ul>
       </div>
     </div>
@@ -170,8 +170,10 @@
                         <h4>May 2020</h4>
                         <h4 class="subheading">The end</h4>
                     </div>
-                    <div class="timeline-body"><p class="text-muted">After finishing everything, I still come across a nice experience. We have been given the opportunity to work with a foreign client, which not every student can say about their internship. </p>
-                  
+                    <div class="timeline-body"><p class="text-muted">After finishing everything, I still come across a nice experience. We have been given the opportunity to work with a foreign client, which not every student can say about their internship. Down below you can find our project plan, realisation document, and my reflection  </p>
+                      <p class="timeline-body"><p class="text-muted">The realistaion document</p>
+                      <p class="timeline-body"><p class="text-muted">The project plan</p>
+                      <p class="timeline-body"><p class="text-muted">The reflection</p>
                     </div>
                 </div>
             </li>
@@ -275,7 +277,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/zwedenport2.jpg" alt="">
           </a>
           <div class="portfolio-caption">
            <h4>Internship</h4>
@@ -286,7 +288,7 @@
   </section>
 
 
-  <!-- Contact -->
+  <!-- Contact
   <section class="page-section" id="contact">
     <div class="container">
       <div class="row">
@@ -329,7 +331,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Footer -->
   <footer class="footer">
@@ -485,7 +487,7 @@
                 <h2 class="text-uppercase">Project Network</h2>
                 <p class="item-intro text-muted">Desinging infrastucture for a company.</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/network3.PNG" alt="">
-                <p>In this project I designed a network infrastructure together with 4 other students. We were commissioned here to build a network infrastructure for a 3-storey building using as little material as possible. This project was quite extensive because it went from internet cables to finding routers and switches and placing them in the right places.</p>
+                <p>In this project I designed a network infrastructure together with 4 other students. We were commissioned here to build a network infrastructure for a 3-storey building using as little material as possible. This project was quite extensive because it went from internet cables to finding routers and switches and placing them in the right places so that everyone in the building has sufficient internet connection.</p>
                 <p>In this document you can find all our findings that we found during this project week <a href="Infra project - Team 6.pdf" target="_blank">Infra project</a></p>
                 <ul class="list-inline">
                   <li>Date: January 2019</li>
@@ -519,11 +521,9 @@
                 <!-- Project Details Go Here -->
                 <h2 class="text-uppercase">Internship</h2>
                 <p class="item-intro text-muted">Erasmus to Sweden</p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/05-full.jpg" alt="">
-                <p>My internship consisted of testing the security of a number of smart home devices that can be found everywhere on the market. We have then written all our findings in a paper that may be published in Stockholm next year. This went from the data that the device forwarded to its server to the possible access points where a potential hacker can enter. Down below you can find our paper, projectplan and my reflection.</p>
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/zweden1.jpg" alt="">
+                <p>My internship consisted of testing the security of a number of smart home devices that can be found everywhere on the market. We have then written all our findings in a paper that may be published in Stockholm next year. This went from the data that the device forwarded to its server to the possible access points where a potential hacker can enter. Down below you can find our paper</p>
                 <p class="timeline-body"><p class="text-muted">The paper</p>
-                <p class="timeline-body"><p class="text-muted">The project plan</p>
-                <p class="timeline-body"><p class="text-muted">The reflection</p>
                 <ul class="list-inline">
                   <li>Date: May 2020</li>
                   <li>Client: Halmstad University</li>
